--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>From Karachi to Toronto: Building Brands That Bridge Cultures</h1>
-            <p class="subtitle">Global Marketing Strategist | AI Enthusiast | Storyteller</p>
+            <p class="subtitle">Global Marketing Strategist | Storyteller</p>
             <button class="cta-button" onclick="scrollToSection('story')">Discover My Journey</button>
         </div>
     </section>
@@ -634,16 +634,12 @@
                     <div class="stat-label">Countries</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">10+</div>
+                    <div class="stat-number">8+</div>
                     <div class="stat-label">Years Experience</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">50+</div>
+                    <div class="stat-number">15+</div>
                     <div class="stat-label">Campaigns</div>
-                </div>
-                <div class="stat-item">
-                    <div class="stat-number">1</div>
-                    <div class="stat-label">Mission</div>
                 </div>
             </div>
         </div>
