--- a/index.html
+++ b/index.html
@@ -861,7 +861,7 @@
                     <div class="contact-item">
                         <div class="contact-icon">📧</div>
                         <div class="contact-label">Email</div>
-                        <div class="contact-value">rozina.punjwani92@gmail.com</div>
+                        <div class="contact-value">punjwanirozina@gmail.com</div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon">💼</div>
