--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rozina Punjwani - Marketing Strategist</title>
   <style>
-    /* (Insert your full CSS <style> block here as in your original file) */
-    /* For brevity, not repeating your full CSS here, but you should paste your entire <style> section from your working version */
+    /* PASTE YOUR FULL CSS CODE HERE! */
   </style>
 </head>
 <body>
-  <!-- Navigation (reuse your existing nav HTML if you have it) -->
+  <!-- PASTE YOUR FULL NAVIGATION HTML HERE -->
 
   <!-- Hero Section -->
   <section id="home" class="hero">
@@ -46,7 +45,6 @@
     <div class="container">
       <h2>Work That Speaks</h2>
       <div class="portfolio-grid">
-        <!-- Other portfolio items ... -->
         <div class="portfolio-card">
           <div class="portfolio-image">
             <a href="https://punjwanirozina.wixsite.com/rozinapunjwani" target="_blank" style="color: white; text-decoration: none;">
@@ -103,7 +101,9 @@
     </div>
   </section>
 
-  <!-- (Optional: Add your unchanged footer and scripts below) -->
+  <!-- (Add back your footer and JavaScript scripts at the end of the body) -->
+
+  <!-- For interactivity and colors, make sure you include your original <script>...</script> if you had one! -->
 
 </body>
 </html>
