--- a/index.html
+++ b/index.html
@@ -188,15 +188,15 @@
         <h3 style="color:#764ba2; margin-bottom:1.5rem;">Moments from Karachi: My Early Career</h3>
         <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 2rem;">
           <div>
-            <img src="image1.jpg" alt="Graduation" style="width:270px; border-radius:12px; box-shadow: 0 4px 16px rgba(44,62,80,0.10)">
+            <img src="image1.jpeg" alt="Graduation" style="width:270px; border-radius:12px; box-shadow: 0 4px 16px rgba(44,62,80,0.10)">
             <div style="margin-top:0.5rem;font-weight:600;">Graduation</div>
           </div>
           <div>
-            <img src="image2.jpg" alt="Advertising Award" style="width:270px; border-radius:12px; box-shadow: 0 4px 16px rgba(44,62,80,0.10)">
+            <img src="image2.jpeg" alt="Advertising Award" style="width:270px; border-radius:12px; box-shadow: 0 4px 16px rgba(44,62,80,0.10)">
             <div style="margin-top:0.5rem;font-weight:600;">Advertising Award</div>
           </div>
           <div>
-            <img src="image3.jpg" alt="Early Worklife" style="width:270px; border-radius:12px; box-shadow: 0 4px 16px rgba(44,62,80,0.10)">
+            <img src="image3.jpeg" alt="Early Worklife" style="width:270px; border-radius:12px; box-shadow: 0 4px 16px rgba(44,62,80,0.10)">
             <div style="margin-top:0.5rem;font-weight:600;">Early Worklife</div>
           </div>
         </div>
