--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@
       <h2>The Journey That Shaped My Vision</h2>
       <div class="story-sections">
         <div class="story-card">
-          <img src="https://unsplash.com/photos/white-and-gray-concrete-buildings-during-daytime-24W9b5WZuS4/download?force=true&w=600" alt="Karachi cityscape">
-          <div class="story-card-content">
+<img src="https://images.unsplash.com/photo-1617373743747-3bb331fd4e8d?q=80&w=1032&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Karachi cityscape">          <div class="story-card-content">
             <div class="story-title">The Karachi Beginning</div>
             <p>
             My marketing story began in Karachi, where I learned that creativity thrives under constraints. Working with local agencies and broadcasters like HUM Network, I discovered that the most impactful campaigns come from understanding your audience's deepest needs. At SZABIST, I wasn't just studying marketing – I was living it. Winning debate competitions taught me the power of persuasive communication, while my early internships and agency work showed me how big ideas start with small insights and rigorous execution.
@@ -165,7 +164,7 @@
           </div>
         </div>
         <div class="story-card">
-          <img src="https://unsplash.com/photos/city-during-day-VbDjv8-8ibc/download?force=true&w=600" alt="Dubai skyline">
+<img src="https://images.unsplash.com/flagged/photo-1559717865-a99cac1c95d8?q=80&w=871&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Dubai skyline">
           <div class="story-card-content">
             <div class="story-title">Dubai Dreams and Global Brands</div>
             <p>
@@ -174,7 +173,7 @@
           </div>
         </div>
         <div class="story-card">
-          <img src="https://unsplash.com/photos/four-people-sits-on-park-benches-across-city-scape-6wVqCeK030Y/download?force=true&w=600" alt="Toronto CN Tower">
+<img src="https://images.unsplash.com/photo-1517090504586-fde19ea6066f?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Toronto CN Tower">
           <div class="story-card-content">
             <div class="story-title">Toronto: Where Global Meets Local</div>
             <p>
