--- a/index.html
+++ b/index.html
@@ -21,39 +21,14 @@
     nav a:hover { background: rgba(243, 156, 18, 0.2); transform: translateY(-2px);}
     nav a::after { content: ''; position: absolute; bottom: 0; left: 50%; width: 0; height: 2px; background: #F39C12; transition: all 0.3s ease; transform: translateX(-50%);}
     nav a:hover::after { width: 80%;}
-    <script>
-function animateCounter(id, target, suffix = "", duration = 2000) {
-  const el = document.getElementById(id);
-  let start = 0;
-  const step = Math.ceil(target / (duration / 16));
-
-  function update() {
-    start += step;
-    if (start < target) {
-      el.textContent = start + suffix;
-      requestAnimationFrame(update);
-    } else {
-      el.textContent = target + suffix;
-    }
-  }
-
-  update();
-}
-
-// Trigger animation when stats section is visible
-const observer = new IntersectionObserver((entries, obs) => {
-  entries.forEach(entry => {
-    if (entry.isIntersecting) {
-      animateCounter("counter-countries", 3, "");
-      animateCounter("counter-years", 8, "+");
-      animateCounter("counter-campaigns", 15, "+");
-      obs.disconnect(); // Only trigger once
-    }
-  });
-}, { threshold: 0.5 });
-
-observer.observe(document.querySelector(".stats"));
-</script>
+    .hero { background: linear-gradient(135deg, rgba(44, 62, 80, 0.9), rgba(52, 73, 94, 0.8)), url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000"><defs><pattern id="grid" width="50" height="50" patternUnits="userSpaceOnUse"><path d="M 50 0 L 0 0 0 50" fill="none" stroke="rgba(255,255,255,0.1)" stroke-width="1"/></pattern></defs><rect width="100%" height="100%" fill="url(%23grid)"/></svg>'); min-height: 100vh; display: flex; align-items: center; justify-content: center; text-align: center; color: white; padding: 120px 20px 80px; position: relative; overflow: hidden;}
+    .hero::before { content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="2" fill="rgba(255,255,255,0.1)"/></svg>') repeat; animation: float 20s infinite linear; opacity: 0.3;}
+    @keyframes float { 0% { transform: translateY(0px); } 100% { transform: translateY(-100px); } }
+    .hero-content { max-width: 800px; position: relative; z-index: 2; }
+    .hero h1 { font-size: 3.5rem; margin-bottom: 1rem; background: linear-gradient(135deg, #F39C12, #E74C3C); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; animation: slideInDown 1s ease-out;}
+    .hero .subtitle { font-size: 1.5rem; margin-bottom: 2rem; opacity: 0.9; animation: slideInUp 1s ease-out 0.3s both;}
+    .hero .cta-button { background: linear-gradient(135deg, #F39C12, #E67E22); color: white; padding: 15px 40px; border: none; border-radius: 50px; font-size: 1.1rem; font-weight: 600; cursor: pointer; transition: all 0.3s ease; box-shadow: 0 5px 15px rgba(243, 156, 18, 0.4); animation: slideInUp 1s ease-out 0.6s both;}
+    .hero .cta-button:hover { transform: translateY(-3px); box-shadow: 0 8px 25px rgba(243, 156, 18, 0.6);}
     .welcome-message { background: linear-gradient(135deg, #667eea, #764ba2); color: white; padding: 60px 40px; border-radius: 20px; font-size: 1.2rem; line-height: 1.8; box-shadow: 0 10px 40px rgba(0,0,0,0.2); position: relative; overflow: hidden; margin: 2rem 0; opacity: 0; transform: translateY(30px); transition: all 0.8s ease;}
     .welcome-message.visible { opacity: 1; transform: translateY(0);}
     .welcome-message::before { content: '"'; position: absolute; top: -10px; left: 20px; font-size: 8rem; color: rgba(255,255,255,0.1); font-family: serif;}
