--- a/index.html
+++ b/index.html
@@ -334,22 +334,22 @@ nav a:hover::after { width: 80%;}
             <div class="blog-card">
                 <div class="blog-card-header">The Mondelez Moment: How One Campaign Changed Everything</div>
                 <div class="blog-card-content">
-                    <p><strong>Preview:</strong> What happens when months of planning, creative brilliance, and strategic execution come together? The Mondelez launch taught me that marketing isn't about pushing products -- it's about creating moments that matter...</p>
+                    <p><strong>Preview:</strong> What happens when digital ideation, creative brilliance, and strategic foresight align? The Cadbury launch showed me that marketing isn’t just about promoting products — it’s about building emotional connections and celebrating shared moments...</p>
                     <details>
                         <summary style="margin:1rem 0;cursor:pointer;color:#D4AF37;font-weight:bold;">Read Full Story</summary>
                         <div>
                             <p>
-                                <strong>Picture this:</strong> It's 2014, and we're about to launch Mondelez brands in a market that's already saturated with confectionery options. The pressure is intense, the stakes are high, and everyone's watching.
+                                <strong>Picture this:</strong> : It’s 2014, and we're gearing up to digitally launch Cadbury under the Mondelez umbrella in a market brimming with confectionery favorites. The challenge is steep, the competition fierce, and the appetite for digital innovation insatiable.
                             </p>
                             <p>
-                                But here's what I learned -- great campaigns aren't born in boardrooms. They're born from understanding that every consumer has a story, and your brand needs to become part of that story.
+                                But here's what I learned — compelling campaigns don’t emerge from boardroom debates. They spring from understanding that every consumer has a story, and your brand must earn a place in that narrative.
                             </p>
                             <p>
-                                <strong>The Challenge:</strong> How do you make new brands feel familiar and trusted brands feel fresh?<br>
-                                <strong>My Approach:</strong> Instead of focusing on product features, we focused on moments. We didn't just advertise chocolate; we celebrated the moments when chocolate matters most.<br>
-                                <strong>The Execution:</strong> Pre-planning became our secret weapon. While others were reactive, we were proactive. We monitored everything -- social sentiment, media coverage, competitor moves, consumer feedback.<br>
-                                <strong>The Result:</strong> The media buzz we generated wasn't just noise -- it was conversation. People weren't just buying products; they were buying into experiences.<br>
-                                <strong>What This Taught Me:</strong> Marketing success isn't about having the biggest budget or the loudest voice. It's about understanding your audience so deeply that your message feels like it was created just for them.
+                                <strong>The Challenge:</strong> How do you make a legacy brand like Cadbury feel digitally fresh without losing its sense of familiarity and trust?<br>
+                                <strong>My Approach:</strong> We didn’t just spotlight chocolate; we spotlighted moments. Moments that make you smile, connect with others, and feel nostalgic — all amplified through digital platforms. Our ideation focused on celebrating the when and why behind indulgence.<br>
+                                <strong>The Execution:</strong> Digital pre-planning became our not-so-secret weapon. We anticipated consumer behavior, tracked sentiment across social media, kept a pulse on competitor chatter, and listened intently to online feedback. Every campaign element was informed by a digitally native strategy.<br>
+                                <strong>The Result:</strong> The buzz wasn’t just loud — it was meaningful. Cadbury became more than a brand in the feed; it became a feeling. Consumers didn’t just engage; they embraced the experience. The conversation around Cadbury was no longer one-sided — it became communal.<br>
+                                <strong>What This Taught Me:</strong> Digital marketing success isn’t just about algorithms or ad impressions. It’s about empathy. When you design with the consumer at the heart, your message resonates like it was handcrafted just for them.
                             </p>
                         </div>
                     </details>
